--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
   </style>
 </head>
 <body>
+  <img src="IMG_2635.jpeg" alt="Reven Logo" style="width:200px; display:block; margin:40px auto; opacity:0.85; filter: drop-shadow(0 0 8px #555); border-radius:10px;">
+  <h2 style="font-weight:300; color:#333; font-size:18px;">"sulit dijangkau, seperti tiada namun ada"</h2>
   <h1>R E V E N</h1>
   <p>hard to reach, as if unseen yet ever-present.</p>
   <p class="founders">— founded by Prince & MR.X —</p>
-</body>
+</body
+  
 </html>
