--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="Yg2C6YTFaPGjZO2USrQq2bBDsF44Gk5TFMNzDtyhcaw" />
   <meta charset="UTF-8">
   <meta name="description" content="Reven — Hard to reach, as if unseen yet ever-present. Founded by Prince and MR.X.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
