--- a/index.html
+++ b/index.html
@@ -37,9 +37,60 @@
       font-size: 0.9em;
     }
   </style>
+  .logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 60px;
+}
+
+.logo {
+  width: 180px;
+  height: auto;
+  border-radius: 10px;
+  filter: drop-shadow(0 0 12px rgba(255,255,255,0.15));
+  transition: 0.5s ease;
+}
+
+.logo:hover {
+  transform: scale(1.08);
+  filter: drop-shadow(0 0 18px rgba(255,255,255,0.25));
+}
+
+h1 {
+  font-size: 36px;
+  font-weight: 600;
+  letter-spacing: 4px;
+  margin-top: 20px;
+  color: #e0e0e0;
+  text-transform: uppercase;
+}
+
+.slogan {
+  font-size: 14px;
+  color: #a8a8a8;
+  font-style: italic;
+  margin-top: -10px;
+  letter-spacing: 1px;
+}
 </head>
 <body>
-  <img src="IMG_2635.jpeg" alt="Reven Logo" style="width:200px; display:block; margin:40px auto; opacity:0.85; filter: drop-shadow(0 0 8px #555); border-radius:10px;">
+  <body>
+  <div class="logo-container">
+    <img src="logo-reven.jpeg" alt="Reven Logo" class="logo">
+  </div>
+
+  <h1>REVEN</h1>
+  <p class="slogan">“Hard to reach — unseen yet present.”</p>
+</body>
+  <body>
+  <div class="logo-container">
+    <img src="logo-reven.jpeg" alt="Reven Logo" class="logo">
+  </div>
+
+  <h1>REVEN</h1>
+  <p class="slogan">“Hard to reach — unseen yet present.”</p>
+</body>
   <h2 style="font-weight:300; color:#333; font-size:18px;">"hahahaha, what do you want hm?"</h2>
   <h1>R E V E N</h1>
   <p>hard to reach, as if unseen yet ever-present.</p>
