--- a/index.html
+++ b/index.html
@@ -40,15 +40,11 @@
 </head>
 <body>
     <img src="logo-reven.jpeg" alt="Reven Logo" class="logo">
-  </div>
-
-  <h1>REVEN</h1>
-  <p class="slogan">“Hard to reach — unseen yet present.”</p>
+  
 </body>
   <h2 style="font-weight:300; color:#333; font-size:18px;">"hahahaha, what do you want hm?"</h2>
   <h1>R E V E N</h1>
-  <p>hard to reach, as if unseen yet ever-present.</p>
-  <p class="founders">— founded by Prince & MR.X —</p>
+  <p class="founders">— Dibentuk oleh Prince & MR.X —</p>
 </body
   
 </html>
