--- a/index.html
+++ b/index.html
@@ -1,50 +1,95 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="google-site-verification" content="Yg2C6YTFaPGjZO2USrQq2bBDsF44Gk5TFMNzDtyhcaw" />
   <meta charset="UTF-8">
-  <meta name="description" content="Reven — Hard to reach, as if unseen yet ever-present. Founded by Prince and MR.X.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reven</title>
   <style>
     body {
-      background-color: #f9f9f9;
-      color: #222;
+      background-color: #0d0d0d;
+      color: #e0e0e0;
       font-family: 'Helvetica Neue', sans-serif;
       text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    .logo-container {
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      margin-top: 80px;
     }
+
+    .logo {
+      width: 180px;
+      height: auto;
+      border-radius: 10px;
+      filter: drop-shadow(0 0 15px rgba(255,255,255,0.15));
+      transition: 0.5s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.08);
+      filter: drop-shadow(0 0 25px rgba(255,255,255,0.3));
+    }
+
     h1 {
-      font-size: 2.8em;
+      font-size: 42px;
+      font-weight: 600;
       letter-spacing: 4px;
-      font-weight: 400;
-      margin-bottom: 10px;
+      margin-top: 25px;
+      color: #f5f5f5;
+      text-transform: uppercase;
     }
-    p {
-      font-size: 1em;
-      color: #555;
-      margin: 6px 0;
-    }
-    .founders {
-      margin-top: 15px;
+
+    .slogan {
+      font-size: 14px;
+      color: #a8a8a8;
       font-style: italic;
-      color: #999;
-      font-size: 0.9em;
+      margin-top: -8px;
+      letter-spacing: 1px;
+    }
+
+    .divider {
+      width: 120px;
+      height: 1px;
+      background-color: #333;
+      margin: 30px auto;
+    }
+
+    .founders {
+      font-size: 13px;
+      color: #777;
+      margin-top: 40px;
+      letter-spacing: 1px;
+    }
+
+    .founders span {
+      color: #c0c0c0;
+    }
+
+    footer {
+      margin-top: 60px;
+      font-size: 11px;
+      color: #555;
     }
   </style>
 </head>
+
 <body>
- 
-  
+  <div class="logo-container">
+    <!-- Ganti 'logo-reven.jpeg' sesuai nama file logo lo -->
+    <img src="logo-reven.jpeg" alt="Reven Logo" class="logo">
+  </div>
+
+  <h1>REVEN</h1>
+  <p class="slogan">“Hard to reach — unseen yet present.”</p>
+
+  <div class="divider"></div>
+
+  <p class="founders">Founded by <span>Prince</span> & <span>MR.X</span></p>
+
+  <footer>© 2025 Reven — Silent Elite</footer>
 </body>
-  <h2 style="font-weight:300; color:#333; font-size:18px;">"hahahaha, what do you want hm?"</h2>
-  <h1>R E V E N</h1>
-  <p class="founders">— Dibentuk oleh Prince & MR.X —</p>
-</body
-  
 </html>
