--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
   <div class="logo-container">
     <!-- Ganti 'logo-reven.jpeg' sesuai nama file logo lo -->
-    <img src="logo-reven.jpeg" alt="Reven Logo" class="logo">
+    <img src="IMG_2635.jpeg" alt="Reven Logo" style="width:200px; display:block; margin:40px auto; opacity:0.85; filter: drop-shadow(0 0 8px #555); border-radius:10px;">
   </div>
 
   <h1>REVEN</h1>
