--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <div class="divider"></div>
 
-  <p class="founders">Founded by <span>Prince</span> & <span>MR.X</span></p>
+  <p class="founders">Didirikan oleh <span>MR.X1</span> & <span>MR.X2</span></p>
 
   <footer>© 2025 Reven — Silent Elite</footer>
 </body>
