--- a/index.html
+++ b/index.html
@@ -5,28 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reven — Silent Elite</title>
   <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
       background-color: #0a0a0a;
       color: #e5e5e5;
       font-family: "Poppins", "Helvetica Neue", sans-serif;
       text-align: center;
-      margin: 0;
-      padding: 0;
-    }
-
-    .logo-container {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin-top: 80px;
+      min-height: 100vh;
+      overflow-x: hidden;
     }
 
     .logo {
-      width: 180px;
+      width: 160px;
       height: auto;
       border-radius: 10px;
       filter: drop-shadow(0 0 18px rgba(255,255,255,0.1));
       transition: 0.6s ease;
+      margin-bottom: 20px;
     }
 
     .logo:hover {
@@ -35,37 +39,37 @@
     }
 
     h1 {
-      font-size: 40px;
+      font-size: 34px;
       font-weight: 600;
       letter-spacing: 4px;
-      margin-top: 25px;
       color: #f5f5f5;
       text-transform: uppercase;
+      margin-bottom: 10px;
     }
 
     .slogan {
       font-size: 14px;
       color: #b0b0b0;
       font-style: italic;
-      margin-top: -8px;
       letter-spacing: 1px;
-      opacity: 0.8;
+      max-width: 90%;
+      margin: 0 auto;
+      line-height: 1.4;
     }
 
     .divider {
-      width: 100px;
+      width: 80px;
       height: 1px;
       background-color: #333;
-      margin: 35px auto;
+      margin: 25px auto;
       opacity: 0.4;
     }
 
     .founders {
       font-size: 13px;
       color: #999;
-      margin-top: 20px;
       letter-spacing: 1px;
-      opacity: 0.8;
+      margin-bottom: 30px;
     }
 
     .founders span {
@@ -74,14 +78,15 @@
     }
 
     footer {
-      margin-top: 60px;
       font-size: 11px;
       color: #555;
       letter-spacing: 1px;
       opacity: 0.6;
+      margin-top: auto;
+      padding-bottom: 15px;
     }
 
-    /* efek halus saat halaman dimuat */
+    /* efek fade in */
     body {
       animation: fadeIn 1.6s ease-in-out;
     }
@@ -94,10 +99,8 @@
 </head>
 
 <body>
-  <div class="logo-container">
-    <img src="IMG_2635.jpeg" alt="Reven Logo" style="width:200px; display:block; margin:auto; opacity:0.85; filter: drop-shadow(0 0 10px #555);">
-
-  <h1>REVEN</h1>
+<img src="IMG_2635.jpeg" alt="Reven Logo" style="width:200px; display:block; margin:auto; opacity:0.85; filter: drop-shadow(0 0 10px #555);">
+  <h1>hahaha... what do you want hm?</h1>
   <p class="slogan">“Hard to reach — unseen yet present.”</p>
 
   <div class="divider"></div>
