--- a/index.html
+++ b/index.html
@@ -39,12 +39,20 @@
     }
 
     h1 {
-      font-size: 34px;
-      font-weight: 600;
-      letter-spacing: 4px;
-      color: #f5f5f5;
-      text-transform: uppercase;
-      margin-bottom: 10px;
+  font-size: 22px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  color: #e0e0e0;
+  text-transform: none;
+  font-style: italic;
+  opacity: 0.85;
+  transition: all 0.4s ease;
+}
+
+h1:hover {
+  letter-spacing: 3px;
+  opacity: 1;
+}
     }
 
     .slogan {
