--- a/index.html
+++ b/index.html
@@ -39,22 +39,21 @@
     }
 
     h1 {
-  font-size: 22px;
+  font-size: 16px;         
   font-weight: 300;
-  letter-spacing: 2px;
-  color: #e0e0e0;
+  letter-spacing: 1.5px;
+  color: #cfcfcf;
   text-transform: none;
   font-style: italic;
-  opacity: 0.85;
+  opacity: 0.8;
   transition: all 0.4s ease;
+  margin-top: 10px;
 }
 
 h1:hover {
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   opacity: 1;
 }
-    }
-
     .slogan {
       font-size: 14px;
       color: #b0b0b0;
